--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Harry Potter in search of the Horrcruxes. The Final Battle</title>
+    <!--IMPORTAMOS LA HOJA DE ESTILOS-->
+    <link href="./styles/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+    <canvas id="canvas" width="1000" height="800"></canvas>
+    <!--IMPORTAMOS ARCHIVOS-->
+    <script src="./js/constants.js" type="text/javascript"></script>
+    <script src="./js/harry.js" type="text/javascript"></script>
+    <script src="./js/dementor.js" type="text/javascript"></script>
+    <script src="./js/background.js" type="text/javascript"></script>
+    <script src="./js/game.js" type="text/javascript"></script>
+    <script src="./js/index.js" type="text/javascript"></script>
+
 
 </body>
 
