--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Harry Potter in search of the Horrcruxes. The Final Battle</title>
     <!--IMPORTAMOS LA HOJA DE ESTILOS-->
     <link href="./styles/style.css" rel="stylesheet" type="text/css" />
+    <!--FAVICON-->
+    <link rel="icon" href="./img/favicon2.png" type="image/x-icon" />
 </head>
 
 <body>
