--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <canvas id="canvas" width="877" height="959"></canvas>
     <!--IMPORTAMOS ARCHIVOS-->
+    <script src="./js/horrocrux.js" type="text/javascript"></script>
     <script src="./js/wall.js" type="text/javascript"></script>
     <script src="./js/constants.js" type="text/javascript"></script>
     <script src="./js/harry.js" type="text/javascript"></script>
