--- a/index.html
+++ b/index.html
@@ -10,17 +10,45 @@
     <link href="./styles/style.css" rel="stylesheet" type="text/css" />
     <!--FAVICON-->
     <link rel="icon" href="./img/favicon2.png" type="image/x-icon" />
+    <style>
+        @font-face {
+            font-family: Harry Potter;
+            src: local("C:\Users\Elizabeth\Desktop\Bootcamp\Harry-Potter-in-search-of-the-Horrorcruxes\font family Harry Potter");
+        }
+    </style>
 </head>
 
 <body>
+    <div id="counter">
+        <h1>Horrocruxes:
+            <span>6</span>
+        </h1>
+        <div class="horrocruxes">
+            <img id="ring" src="./img/horrocruxes/ring.png">
+            <img id="cup" src="./img/horrocruxes/cup.png">
+            <img id="diadem" src="./img/horrocruxes/diadem.png">
+            <img id="diary" src="./img/horrocruxes/diary.png">
+            <img id="nagini" src="./img/horrocruxes/nagini.png">
+            <img id="locket" src="./img/horrocruxes/locket.png">
+        </div>
+    </div>
+
+    <div id="continue">
+        <h1>BATTLE=></h1>
+    </div>
+
+
     <canvas id="canvas" width="877" height="959"></canvas>
+    <canvas id="canvasTwo" width="877" height="959"></canvas>
     <!--IMPORTAMOS ARCHIVOS-->
+    <script src="./js/battle.js" type="text/javascript"></script>
     <script src="./js/horrocrux.js" type="text/javascript"></script>
     <script src="./js/wall.js" type="text/javascript"></script>
     <script src="./js/constants.js" type="text/javascript"></script>
     <script src="./js/harry.js" type="text/javascript"></script>
     <script src="./js/dementor.js" type="text/javascript"></script>
     <script src="./js/background.js" type="text/javascript"></script>
+    <script src="./js/backgroundTwo.js" type="text/javascript"></script>
     <script src="./js/game.js" type="text/javascript"></script>
     <script src="./js/index.js" type="text/javascript"></script>
 
