--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     <canvas id="canvas" width="877" height="959"></canvas>
-    <canvas id="canvasTwo" width="877" height="959"></canvas>
+    <!--<canvas id="canvasTwo" width="877" height="959"></canvas>-->
     <!--IMPORTAMOS ARCHIVOS-->
     <script src="./js/battle.js" type="text/javascript"></script>
     <script src="./js/horrocrux.js" type="text/javascript"></script>
