--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div id="counter">
+    <div id="counter" style="display:none">
         <h1>Horrocruxes:
             <span>6</span>
         </h1>
@@ -32,15 +32,29 @@
             <img id="locket" src="./img/horrocruxes/locket.png">
         </div>
     </div>
-
-    <div id="continue">
+<!--<div id="continue">
         <h1>BATTLE=></h1>
+    </div>-->
+   
+    <div id="Starting-Screen" style="display:block">
+        <h1>Harry Potter in search of the Horrocruxes</h1>
+        <div class="start-button">START<br> GAME</div>
     </div>
 
+    <canvas id="canvas" style="display: none" width="877" height="959"></canvas>
 
-    <canvas id="canvas" width="877" height="959"></canvas>
-    <!--<canvas id="canvasTwo" width="877" height="959"></canvas>-->
+    <!--<script>-->
+    <!--  $(".start-button").click(function () {
+       $("#Starting-Screen").hide();
+           $("#canvas").show();
+        });-->
+    <!--</script>-->
+    <!-- <canvas id="canvasTwo" style="display: none" width="877" height="959"></canvas>-->
+
     <!--IMPORTAMOS ARCHIVOS-->
+    <script src="./js/ball.js" type="text/javascript"></script>
+    <script src="./js/voldemort.js" type="text/javascript"></script>
+    <script src="./js/forest.js" type="text/javascript"></script>
     <script src="./js/battle.js" type="text/javascript"></script>
     <script src="./js/horrocrux.js" type="text/javascript"></script>
     <script src="./js/wall.js" type="text/javascript"></script>
